# raise-summit-hackathon-soai-2026

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
backend/: .env.example  celery_app.py  main.py  pyproject.toml  run-dev.sh
backend/alembic/: env.py
backend/alembic/versions/: 1a53df53b8db_schema.py  7411d61f4628_initial.py  a7b9c1d3e6f5_drop_lead_slug.py  b2c4e6f8a1d0_drop_mission_type.py  b8c0d2e4f6a7_add_lead_rich_content_fields.py  (+16 more)
backend/data/: raise_summit.db
backend/database/: __init__.py  config.py  dependencies.py  seed.py  seed.sql  session.py
backend/routers/: __init__.py  business_profiles.py  home.py  insights.py  leads.py  missions.py  network_members.py  outreach.py  search_agent.py
backend/scripts/: run_search_agent_example.py
backend/search_agent/: README.md  __init__.py  agent.py  dedupe.py  deep_search_loop.py  errors.py  mock_data.py  schemas.py  search_profiles.py  utils.py
backend/services/: business_profiles.py  dashboard.py  insights.py  lead_display.py  leads.py  mission_intelligence.py  mission_llm.py  mission_search.py  missions.py  network_members.py  outreach_llm.py  search_agent.py  search_progress.py  users.py
backend/tasks/: mission_search.py
backend/tests/: conftest.py  test_business_profile.py  test_dashboard.py  test_dashboard_insights.py  test_health.py  test_leads.py  test_mission_assist.py  test_mission_intelligence.py  test_mission_llm.py  test_mission_search.py  test_missions.py  test_network_members.py  test_search_agent_service.py  test_target_keywords.py  test_target_keywords_llm.py
(+178 files in other folders)
