[tool.poetry]
name = "raise-summit-backend"
version = "0.1.0"
description = "FastAPI backend for Raise Summit"
authors = ["Ahmed"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.34.0" }
sqlalchemy = "^2.0.0"
python-dotenv = "^1.0.0"
alembic = "^1.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
httpx = "^0.28.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"